local/front/deployment-arlette.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arlette-deployment
  labels:
    app: arlette # important 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arlette
  template:
    metadata:
      labels:
        app: arlette
    spec:
      containers:
      - name: arlette
        image: briandwamba/nemesis:frontend-v0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arlette-service
  name: arlette-service
spec:
  type: NodePort
  selector:
    app: arlette-service  # this have to match with the service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
