local/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nemesis-frontend-deployment
  labels:
    app: nemesis-frontend # important 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nemesis-frontend
  template:
    metadata:
      labels:
        app: nemesis-frontend
    spec:
      containers:
      - name: nemesis-frontend
        image: briandwamba/nemesis:frontend-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: configmap-nginx-volume
      volumes:
      - configMap:
          defaultMode: 420
          name: nemesis-frontend-configmap
        name: configmap-nginx-volume
        

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nemesis-frontend
  name: nemesis-frontend-service
spec:
  type: NodePort
  selector:
    app: nemesis-frontend  # this have to match with the service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
