local/front/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemesis-frontend-ingress
spec:
  rules:
  - host: nemesis-test-wamba.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nemesis-frontend-service
            port:
              number: 80
